--- a/Lab2/Lab2.csproj
+++ b/Lab2/Lab2.csproj
@@ -51,15 +51,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Lab1\Lab1.csproj">
-      <Project>{9425027b-8b01-4f8c-be36-78b36b2716ac}</Project>
-      <Name>Lab1</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-    <Folder Include="Functions\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
