--- a/NNBasicsLimak/NNBasicsLimak.csproj
+++ b/NNBasicsLimak/NNBasicsLimak.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>NNBasics.NNBasicsLimak</RootNamespace>
-    <AssemblyName>NNBasics</AssemblyName>
+    <AssemblyName>NNBasicsLimak</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
