Added some extensions, moreover the latest response from Proceed is stored by layer to avoid using redundant operations and parameters

--- a/Lab1/Lab1.csproj
+++ b/Lab1/Lab1.csproj
@@ -54,6 +54,8 @@
     <ProjectReference Include="..\NNBasicsLimak\NNBasicsLimak.csproj">
       <Project>{023afb12-3492-47ef-b415-87f30f24d48d}</Project>
       <Name>NNBasicsLimak</Name>
+      <EmbedInteropTypes>False</EmbedInteropTypes>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
