Added HiddenLayerBuilder - the nested type of NeuralNetworkBuilder that prepares new hidden layer. Added so called dropout feature to overcome overfitting problems. Moreover added extension for generic lists Shuffle.

--- a/NNBasicsLimak/NNBasicsLimak.csproj
+++ b/NNBasicsLimak/NNBasicsLimak.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Core\NeuralNetwork.cs" />
     <Compile Include="Core\Neurons\InputNeuron.cs" />
     <Compile Include="Core\Neurons\OutputNeuron.cs" />
+    <Compile Include="Core\UtilityTypes\Logger.cs" />
     <Compile Include="Core\UtilityTypes\Matrix.cs" />
     <Compile Include="Extensions\DoubleExtensions.cs" />
     <Compile Include="Extensions\ListExtensions.cs" />
