Added tests for my neural network, I mean, added solutions for tasks from laboratories No.2 and No.3. Moreover code was cleaned up, Batch Learning in progress, I should also take into consideration adding ability to inject test set for instance for every 10 or 20 iterations to check quality of my network.

--- a/Lab2/Lab2.csproj
+++ b/Lab2/Lab2.csproj
@@ -68,6 +68,11 @@
     <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\NNBasicsLimak\NNBasicsLimak.csproj">
+      <Project>{023AFB12-3492-47EF-B415-87F30F24D48D}</Project>
+      <Name>NNBasicsLimak</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
