--- a/Lab1/Lab1.csproj
+++ b/Lab1/Lab1.csproj
@@ -66,6 +66,10 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <Resource Include="Resources\t10k-images-idx3-ubyte" />
+    <Resource Include="Resources\t10k-labels-idx1-ubyte" />
+    <Resource Include="Resources\train-images-idx3-ubyte" />
+    <Resource Include="Resources\train-labels-idx1-ubyte" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\NNBasicsLimak\NNBasicsLimak.csproj">
