--- a/NNBasicsUtilities/NNBasicsUtilities.csproj
+++ b/NNBasicsUtilities/NNBasicsUtilities.csproj
@@ -17,4 +17,7 @@
 			<_Parameter1>$(MSBuildProjectName)Tests</_Parameter1>
 		</AssemblyAttribute>
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Core\Models\" />
+	</ItemGroup>
 </Project>
