--- a/NNBasicsUtilitiesTests/NNBasicsUtilitiesTests.csproj
+++ b/NNBasicsUtilitiesTests/NNBasicsUtilitiesTests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet.Core" Version="0.10.14" />
     <PackageReference Include="Microsoft.ML" Version="1.5.0" />
     <PackageReference Include="Microsoft.ML.CpuMath" Version="1.5.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
